[gd_scene load_steps=9 format=3 uid="uid://bx5c4krg53dfq"]

[ext_resource type="Script" path="res://scripts/card_object.gd" id="1_wshl8"]
[ext_resource type="Texture2D" uid="uid://olm70ph31u5g" path="res://sprites/card-placeholder.png" id="2_xq6cf"]
[ext_resource type="Texture2D" uid="uid://rdmrhc6lahfq" path="res://sprites/coin-placeholder.png" id="3_xwi7l"]
[ext_resource type="Texture2D" uid="uid://bdiw6mgjloxjw" path="res://sprites/damage-placeholder.png" id="4_gsycv"]

[sub_resource type="LabelSettings" id="LabelSettings_6a1tc"]
font_color = Color(0.984314, 0.94902, 0.211765, 1)
outline_size = 4
outline_color = Color(0.580392, 0.564706, 0.25098, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_7huce"]
font_size = 8
font_color = Color(0.345098, 0.337255, 0.321569, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_4oqj5"]
font_color = Color(0.458824, 0.647059, 0.980392, 1)
outline_size = 3
outline_color = Color(0.263618, 0.504675, 0.943998, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxmh3"]
size = Vector2(78, 50)

[node name="Card" type="Node2D"]
script = ExtResource("1_wshl8")

[node name="BaseCardSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_xq6cf")

[node name="CostDisplay" type="Node2D" parent="."]
visible = false

[node name="CostBaseSprite" type="Sprite2D" parent="CostDisplay"]
position = Vector2(25, -48)
texture = ExtResource("3_xwi7l")

[node name="CostLbl" type="Label" parent="CostDisplay"]
offset_left = -3.0
offset_top = -60.0
offset_right = 17.0
offset_bottom = -37.0
text = "3"
label_settings = SubResource("LabelSettings_6a1tc")
horizontal_alignment = 2

[node name="NameDisplay" type="Node2D" parent="."]

[node name="NameLbl" type="Label" parent="NameDisplay"]
offset_left = -32.0
offset_top = -26.0
offset_right = 28.0
offset_bottom = -13.0
text = "Card Name"
label_settings = SubResource("LabelSettings_7huce")

[node name="CardImage" type="Node2D" parent="."]
position = Vector2(0, -38)

[node name="CardImageSprite" type="Sprite2D" parent="CardImage"]

[node name="DamageDisplay" type="Node2D" parent="."]

[node name="DamageLbl" type="Label" parent="DamageDisplay"]
offset_left = -16.0
offset_top = -60.0
offset_right = 4.0
offset_bottom = -37.0
text = "2"
label_settings = SubResource("LabelSettings_4oqj5")

[node name="DamageBaseSprite" type="Sprite2D" parent="DamageDisplay"]
position = Vector2(-25, -48)
texture = ExtResource("4_gsycv")

[node name="ClickableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
position = Vector2(0, -38)
shape = SubResource("RectangleShape2D_hxmh3")

[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_clickable_area_mouse_exited"]
